--- a/client/src/pages/server/server.html
+++ b/client/src/pages/server/server.html
@@ -7,7 +7,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="content">
   <ion-list>
     <ion-item *ngFor="let msg of chat.messages">
       <label>
