--- a/client/src/pages/server/server.html
+++ b/client/src/pages/server/server.html
@@ -9,20 +9,40 @@
 
 <ion-content class="content">
   <ion-list>
-    <ion-item *ngFor="let msg of chat.messages">
-      <label>
+    <ion-item *ngFor="let msg of chat.messages" class="message">
+      <div class="author">
         {{msg.author.name}}
-      </label><br>
-      <p>
+      </div>
+      <div class="text">
         {{msg.text}}
-      </p>
+      </div>
+      <div *ngIf="msg.file" class="file" (click)='download(msg.file.uuid)'>
+        <div class="fileimg">
+          <ion-icon name="document" *ngIf="!msg.thumbnail"></ion-icon>
+          <img src="{{msg.thumbnail}}" *ngIf="msg.thumbnail">
+        </div>
+        <span class="filename">{{msg.file.filename}}</span>
+      </div>
     </ion-item>
   </ion-list>
 </ion-content>
 
 <ion-footer>
+  <input type="file" id="filePicker" (change)="fileChange($event)"/>
+  <ion-item *ngIf="file">
+    <button item-left clear large>
+      <ion-icon name="document" *ngIf="fileContent"></ion-icon>
+    </button>
+    <ion-spinner item-left *ngIf="!fileContent"></ion-spinner>
+    {{file.name}}
+    <button item-right clear large (click)='removeFile()'>
+      <ion-icon name="close"></ion-icon>
+    </button>
+  </ion-item>
   <ion-item>
-    <ion-icon name="attach" clear item-left></ion-icon>
+    <button item-left clear large (click)="pickFile()">
+      <ion-icon name="attach"></ion-icon>
+    </button>
     <ion-input placeholder="Send Message" [(ngModel)]="message" (keypress)="keyPressed($event.keyCode)"></ion-input>
     <button item-right clear large (click)='send()'>
       <ion-icon name="send"></ion-icon>
